--- a/RecheckApps/app/build.gradle
+++ b/RecheckApps/app/build.gradle
@@ -57,8 +57,10 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2'
 
     // android lifecycle
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.activity:activity-ktx:1.1.0"
 
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
