--- a/RecheckApps/app/src/main/AndroidManifest.xml
+++ b/RecheckApps/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="id.B21_CAP0304.RecheckApps">
+    package="id.B21_CAP0304.RecheckApps"
+    android:targetSandboxVersion="1">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -8,10 +9,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_config"
         android:theme="@style/Theme.RecheckApps">
-        <activity android:name=".ui.result.ResultActivity"></activity>
+        <activity android:name=".ui.result.ResultActivity"/>
         <activity android:name=".ui.detail.DetailActivity" />
         <activity android:name=".ui.newes.NewesActivity" />
         <activity android:name=".ui.main.MainActivity">
