--- a/RecheckApps/app/src/main/AndroidManifest.xml
+++ b/RecheckApps/app/src/main/AndroidManifest.xml
@@ -3,26 +3,27 @@
     package="id.B21_CAP0304.RecheckApps"
     android:targetSandboxVersion="1">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:networkSecurityConfig="@xml/network_config"
-        android:theme="@style/Theme.RecheckApps">
-        <activity android:name=".ui.detail.DetailActivity" />
-        <activity android:name=".ui.newes.NewesActivity" />
-        <activity android:name=".ui.main.MainActivity">
+        android:theme="@style/Theme.RecheckApps"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".ui.splashscreen.SplashscreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.detail.DetailActivity" />
+        <activity android:name=".ui.newes.NewesActivity" />
+        <activity android:name=".ui.main.MainActivity"/>
     </application>
 
 </manifest>
